[package]
name = "stellar-lighthorizon"
version = "0.0.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
static_assertions = "1.1.0"
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "378b1a5ace92e1dc5612a3556ae859f6d6b6de37" }
stellar-contract-env-host = { git = "https://github.com/stellar/rs-stellar-contract-env", rev = "b17ef082", features = ["vm"] }
im-rc = { version = "15.0.0", optional = true }
num-bigint = { version = "0.4", optional = true }
num-rational = { version = "0.4", optional = true }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "lighthorizon"

[features]
default = ["host_context"]
host_context = ["stellar-xdr/std", "im-rc", "num-bigint", "num-rational"]

[target.debug.features]
default = ["host_context"]

[target.release.features]
default = ["host_context"]
